feat: Correct .gitignore to track src directory

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,11 @@
 # Игнорировать папку с кодом Pimcore и его зависимостями.
 # Мы публикуем ШАБЛОН, а не готовый проект.
 # Сам проект будет устанавливаться локально.
-/src/
+# Игнорировать всё содержимое папки src...
+src/*
+
+# ...кроме файла .gitkeep
+!src/.gitkeep
 
 # Игнорировать временные файлы Docker
 db_data/
